2008-04-15  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl: 
	handled the special case of the "erlang" module.
	handling the F-A delimiter that changed between R11 and R12.

2008-04-10  Mats Cronqvist  <masse@kreditor.se>

	* elisp/erl-service.el: 
	added erl-find-module (prompt for module name and open erl file) 

	and 
	
	erl-find-sig-under-point (print function signature(s) in mini-buffer)
	e.g., doing erl-find-sig-under-point on "li:fl" will print this;
	
	lib:flush_receive() -> void()
	lists:flatlength(DeepList) -> int()
	lists:flatmap(Fun, List1) -> List2
	lists:flatten(DeepList, Tail) -> List
	lists:flatten(DeepList) -> List

2008-04-09  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl: 
	* src/distel.erl: 
	  in the process of adding document browsing to distel.
	currently, M-x erl-find-doc-under-point will pop a buffer and
	display the OTP html doc for the function under point.
	requires 'w3m' and 'w3m-el' to be installed.
	
2007-11-03  Bill Clementson  <billclem@gmail.com> 

	* elisp/derl.el (derl-string-make-unibyte,
	derl-recv-challenge-ack): Mods for unicode. Patch supplied by
	Dimitris Dinodimos.

	* elisp/net-fsm.el (fsm-open-socket): Mods for unicode. Patch
	supplied by Dimitris Dinodimos.
	
2007-09-27  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-complete): Modified Completions buffer
	handling to better conform to standard Emacs completions.
	
2007-09-17  Bill Clementson  <billclem@gmail.com> & Matthias Radestock  

	* src/distel.erl: Changed who-calls xref:q call so that line
	numbers of function calls were returned rather than the line
	number of the start of the calling function.

	* elisp/erl-service.el (erl-find-callers, erl-who-calls-mode,
	erl-goto-caller, erl-propertize-insert): Added derived mode for
	who-calls and functionality to go to call locations.	
	
2007-09-14  Bill Clementson  <billclem@gmail.com> & Matthias Radestock  

	* src/distel.erl: Replaced module and function